--- a/selector/build.gradle
+++ b/selector/build.gradle
@@ -14,7 +14,7 @@ apply plugin: 'maven-publish'
 apply plugin: 'java'
 
 group = 'com.github.boybeak'
-version = '1.1.0'
+version = '1.1.2'
 
 publishing {
     publications {
@@ -22,9 +22,34 @@ publishing {
             from components.java
             groupId 'com.github.boybeak'
             artifactId 'selector'
-            version '1.1.0'
+            version '1.1.2'
         }
     }
+}
+
+task sourcesJar(type: Jar) {
+    from 'src/main/java'
+    classifier = 'sources'
+
+}
+
+/*task javadoc(type: Javadoc) {
+    source = 'src/main/java'
+    classpath += project.files(java.getBootClasspath().join(File.pathSeparator))
+    options.encoding "UTF-8"
+    options.charSet 'UTF-8'
+    failOnError false
+
+}*/
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives javadocJar
+    archives sourcesJar
 }
 
 bintray {
@@ -34,6 +59,7 @@ bintray {
     pkg {
         repo = 'nulldreams'
         name = 'selector'
+        publish = true
         userOrg = user
         licenses = ['Apache-2.0']
         vcsUrl = 'https://github.com/boybeak/Selector.git'
@@ -41,7 +67,7 @@ bintray {
         publicDownloadNumbers = true
         attributes= ['a': ['ay1', 'ay2'], 'b': ['bee'], c: 'cee'] //Optional package-level attributes
         version {
-            name = '1.1.0'
+            name = '1.1.2'
             desc = 'Gradle Bintray Plugin 1.0 final'
             vcsTag = '1.3.0'
             attributes = ['gradle-plugin': 'com.use.less:com.use.less.gradle:gradle-useless-plugin']
@@ -57,5 +83,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
 
-sourceCompatibility = "1.8"
-targetCompatibility = "1.8"
+sourceCompatibility = "1.7"
+targetCompatibility = "1.7"
