--- a/selector/build.gradle
+++ b/selector/build.gradle
@@ -1,28 +1,17 @@
-buildscript {
-    repositories {
-        jcenter()
-    }
-}
-
-plugins {
-    id "com.jfrog.bintray" version "1.7"
-}
-
-
+apply plugin: 'java'
+apply plugin: 'com.jfrog.bintray'
 apply plugin: 'maven'
 apply plugin: 'maven-publish'
-apply plugin: 'java'
 
 group = 'com.github.boybeak'
-version = '1.1.2'
-
+version = '1.2.0'
 publishing {
     publications {
         MyPublication(MavenPublication) {
             from components.java
             groupId 'com.github.boybeak'
             artifactId 'selector'
-            version '1.1.2'
+            version '1.2.0'
         }
     }
 }
@@ -32,15 +21,6 @@ task sourcesJar(type: Jar) {
     classifier = 'sources'
 
 }
-
-/*task javadoc(type: Javadoc) {
-    source = 'src/main/java'
-    classpath += project.files(java.getBootClasspath().join(File.pathSeparator))
-    options.encoding "UTF-8"
-    options.charSet 'UTF-8'
-    failOnError false
-
-}*/
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
     classifier = 'javadoc'
@@ -67,7 +47,7 @@ bintray {
         publicDownloadNumbers = true
         attributes= ['a': ['ay1', 'ay2'], 'b': ['bee'], c: 'cee'] //Optional package-level attributes
         version {
-            name = '1.1.2'
+            name = '1.2.0'
             desc = 'Gradle Bintray Plugin 1.0 final'
             vcsTag = '1.3.0'
             attributes = ['gradle-plugin': 'com.use.less:com.use.less.gradle:gradle-useless-plugin']
